--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,78 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Piduino Fish Feeder</title>
-	<link rel="stylesheet" type="text/css" href="../static/style.css">
-</head>
-<body>
-	<header id="mainHeader">
-		<div class="container">
-			<h1>Piduino Automated Fish Feeder</h1>
-		</div>
-	</header>
+{% extends "base.html" %}
+{% block mainContent %}
 
-	<nav id="navbar">
-		<div class="container">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-			</ul>
-		</div>
-	</nav>
+<p>Could probably put some update stuff here or something. Not really sure yet.</p>
 
-	<section id="banner"></section>
-
-    <div class="container">
-        <section id="inputArea">
-            <form class="changeSchedule">
-                <h1>Change Feeder Schedule</h1>
-				<div class="formGroup">
-					<label>Feed Start Time: </label>
-					<select name="feedStart">
-						<option value="0">12:00 am</option>
-						<option value="1">1:00am</option>
-						<option value="2">2:00am</option>
-						<option value="3">3:00am</option>
-						<option value="4">4:00am</option>
-						<option value="5">5:00am</option>
-						<option value="6">6:00am</option>
-						<option value="7">7:00am</option>
-						<option value="8">8:00am</option>
-						<option value="9">9:00am</option>
-						<option value="10">10:00am</option>
-						<option value="11">11:00am</option>
-						<option value="12">12:00pm</option>
-						<option value="13">1:00pm</option>
-						<option value="14">2:00pm</option>
-						<option value="15">3:00pm</option>
-						<option value="16">4:00pm</option>
-						<option value="17">5:00pm</option>
-						<option value="18">6:00pm</option>
-						<option value="19">7:00pm</option>
-						<option value="20">8:00pm</option>
-						<option value="21">9:00pm</option>
-						<option value="22">10:00pm</option>
-						<option value="23">11:00pm</option>
-					</select>
-				</div>
-				<div class="formGroup">
-					<label>Feed Interval (hours): </label>
-					<input type="number" name="feedInterval" value="24">
-				</div>
-				<div class="formGroup">
-					<input type="submit" name="submit" value="Submit">
-				</div>
-            </form>
-        </section>
-        <aside id="sidebar">
-			<h1>Status</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam beatae commodi cupiditate dolorum, eaque earum odit perspiciatis sequi vel voluptatum! Ab deleniti dolorem earum eveniet explicabo incidunt laboriosam ullam voluptates?</p>
-        </aside>
-    </div>
-
-	<footer id="mainFooter">
-		<p>Copyright &copy; 2017 1807 Productions</p>
-	</footer>
-
-</body>
-</html>
+{% endblock %}
