--- a/website/templates/live_view.html
+++ b/website/templates/live_view.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block mainContent %}
 
-<p>Some stuff for the about page would go here.</p>
+<p>Try to imagine a webcam of the tank here</p>
 
 {% endblock %}
