--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -12,6 +12,58 @@ body{
 	overflow:hidden;
 }
 
+.modalBox{
+	display:none;
+	position:fixed;
+	z-index:1;
+	left:0;
+	top:0;
+	width:100%;
+	height:100%;
+	overflow:auto;
+	background-color:rgba(0,0,0,0.5);
+}
+
+.modal_content{
+	background-color:antiquewhite;
+	margin:10% auto;
+	padding:0;
+	border:2px solid #000;
+	border-radius: 4px;
+	width:30%;
+}
+
+.modal_header{
+	padding:2px 16px;
+	background-color:#333;
+	color:#fff;
+}
+
+.modal_body{
+	padding: 12px 16px;
+}
+
+.modal_footer{
+	padding: 2px 16px;
+	background-color:#333;
+	color:#fff;
+}
+
+.closeBtn{
+	color:#fff;
+	float:right;
+	font-size:28px;
+	font-weight:bold;
+}
+
+.closeBtn:hover{
+	color: deepskyblue;
+	text-decoration:none;
+	cursor:pointer;
+}
+
+
+
 #mainHeader{
 	background-color:deepskyblue;
 	text-align:center;
@@ -43,6 +95,7 @@ body{
 #navbar a:hover{
 	background-color:#333;
 	padding: 1.6em 0.8em;
+	cursor:pointer;
 }
 
 #banner{
@@ -53,19 +106,19 @@ body{
 	width: 100%;
 }
 
-#inputArea{
+#contentArea{
 	float:left;
 	width:70%;
-	padding:10px;
+	padding:0 10px;
 	box-sizing:border-box;
 }
 
 #sidebar{
 	float:right;
 	width:30%;
-	padding:10px;
+	padding:0px 10px 10px 10px;
 	box-sizing:border-box;
-	background: slategrey;
+	background:dimgrey;
 }
 
 #sidebar h1{
@@ -73,6 +126,22 @@ body{
 	background-color:#333;
 	color:#fff;
 	padding:10px;
+}
+
+#sidebarSubcontent{
+	color:#fff;
+	padding:0 10px;
+	margin:10px 0;
+	background-color:#333;
+}
+
+#sidebarContent h2{
+	font-size:18px;
+}
+
+#sidebarContent p{
+	text-align:center;
+	font-size:14px;
 }
 
 .changeSchedule .formGroup{
@@ -97,6 +166,10 @@ body{
 	border-radius:4px;
 	background-color:#f1f1f1;
 	font-size:16px;
+}
+
+.changeSchedule select:hover{
+	cursor:pointer;
 }
 
 .changeSchedule input[type="number"]{
