--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,6 +19,8 @@
 				<li><a href="{{url_for('about')}}">About</a></li>
 				<li><a href="{{url_for('change_schedule')}}">Change Schedule</a></li>
                 <li><a href="{{url_for('live_view')}}">Live View</a></li>
+                <li><a href="{{url_for('settings')}}">Settings</a></li>
+
 			</ul>
 		</div>
 	</nav>
