--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -199,3 +199,22 @@ body{
 	margin-top:40px;
 	text-align:center;
 }
+
+.reset h1{
+	background:#333;
+	color:#fff;
+	padding:10px;
+	text-align:center;
+}
+
+.reset input[type="submit"]{
+	background-color:#333;
+	color:#fff;
+	padding: 10px 15px;
+	border:none;
+}
+
+.reset input[type="submit"]:hover{
+	background-color:deepskyblue;
+}
+
