--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -218,3 +218,10 @@ body{
 	background-color:deepskyblue;
 }
 
+.welcome h1{
+	background:#333;
+	color:#fff;
+	padding:10px;
+	text-align:center;
+}
+
