--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block mainContent %}
 
-<p>Could probably put some update stuff here or something. Not really sure yet.</p>
+<div class="welcome">
+	<h1>Welcome!</h1>
+
+	<p>This is the control site for the piduino fish feeder.  You can monitor the feeder's status and change the feeding schedule here.</p>
+</div>
 
 {% endblock %}
