--- a/website/templates/settings.html
+++ b/website/templates/settings.html
@@ -2,11 +2,12 @@
 {% block mainContent %}
 
 
-<form class="reset" method="POST" onsubmit="return resetController();">
+<form class="reset" action="{{ url_for('settings') }}"  method="POST">
 	<h1>Restart Program:</h1>
 		<p>In the event of a crash or error, use this button to reset the feeder scheduling program.</p>
-
-		<input type="submit" name="Reset" value="reset">
+		
+		<input type="hidden" name="reset" value = "Reset">
+		<input type="submit" name="submit" value="Reset">
 </form>
 
 
