Webpage Content Tweaks
Changed some of the web content to follow with some functionality
updates.

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block mainContent %}
 
-<p>Some stuff for the about page would go here.</p>
+<p>This website is used to control and monitor the different systems handled by the piduino aquarium manager.  
+	Current supported functions include scheduled fish feeder and water level monitor with auto top off.  More features coming soon!</p>
 
 {% endblock %}
