--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Piduino Fish Feeder</title>
+	<title>Piduino Aquarium Manager</title>
     <link rel="icon" href="{{ url_for('static', filename='css/images/fishy.ico') }}" />
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
 	<header id="mainHeader">
 		<div class="container">
-			<h1>Piduino Automated Fish Feeder</h1>
+			<h1>Piduino Aquarium Manager</h1>
 		</div>
 	</header>
 
