--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,7 +4,7 @@
 <div class="welcome">
 	<h1>Welcome!</h1>
 
-	<p>This is the control site for the piduino fish feeder.  You can monitor the feeder's status and change the feeding schedule here.</p>
+	<p>This is the control site for the piduino aquarium manager.  You can see how your aquarium is doing here.</p>
 </div>
 
 {% endblock %}
