--- a/website/templates/live_view.html
+++ b/website/templates/live_view.html
@@ -4,6 +4,8 @@
 <div class="liveFeed">
 	<h1>Live Feed</h1>
 	
+	<p>Live feed temporarily disabled.</p>
+	
 	<img src="{{ url_for('camera_feed') }}">
 </div>
 {% endblock %}
