Code restructured to allow for profile support

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,11 +15,7 @@
 	<nav id="navbar">
 		<div class="container">
 			<ul>
-				<li><a href="{{url_for('index')}}">Home</a></li>
-				<li><a href="{{url_for('about')}}">About</a></li>
-				<li><a href="{{url_for('change_schedule')}}">Change Schedule</a></li>
-                <li><a href="{{url_for('live_view')}}">Live View</a></li>
-                <li><a href="{{url_for('settings')}}">Settings</a></li>
+				<li><a href="{{url_for('main.index')}}">Home</a></li>
 
 			</ul>
 		</div>
